--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-The migbirdHIP package provides an easy-to-use set of R functions for the U.S. Fish and Wildlife Service Migratory Bird Program to wrangle, tidy, and visualize [Harvest Information Program](https://www.fws.gov/harvestsurvey) data.
+The migbirdHIP package provides an easy-to-use set of R functions for the U.S. Fish and Wildlife Service Migratory Bird Program to process, clean, and visualize [Harvest Information Program](https://www.fws.gov/harvestsurvey) data.
 
 Tasks that can be accomplished with this package include:
 
@@ -25,8 +25,8 @@ Tasks that can be accomplished with this package include:
 * `clean` does basic reorganization tasks
 * `fileCheck` makes sure all files are new
 * `glyphCheck` identifies non-UTF-8 characters
-* `shiftCheck` finds line shift errors and `shiftFix` corrects them
-* `strataCheck` identifies any new strata
+* `shiftCheck` finds line shift errors
+* `strataCheck` identifies any new or unexpected strata
 * `validate` checks for table-wide repetition
 * `identicalBags` checks for matching columns within files
 * `issueCheck` looks for records that should be processed later
@@ -37,14 +37,13 @@ Tasks that can be accomplished with this package include:
 * Error visualization with `errorPlot_dl`, `errorPlot_fields`, and `errorPlot_states`
 * Exploration of specific errors with `youthHunters` and `outOfStateHunters`
 * Detailed error reporting with `errorTable`, `pullErrors`, and `redFlags`
-* `manualFix` lets the user fix any remaining unsatisfactory values
 * Automated report writing with `writeReport` 
 * Custom .csv writing with `write_hip`
 
 ## Installation
 
 ```r 
-devtools::install_github("USFWS/migbirdHIP", quiet = T, upgrade = F, build_vignettes = T)
+devtools::install_github("USFWS/migbirdHIP", build_vignettes = T)
 ```
 
 ## Vignette
