--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -145,7 +145,7 @@ issue_assignments <- migbirdHIP:::issueAssign(cleaned_data, params$year)
 
 bit <-
   issue_assignments |>
-  dplyr::select(dl_state, source_file, issue_date, registration_yr) |>
+  dplyr::select(dl_state, source_file, issue_date, registration_yr, issue_eval) |>
   dplyr::left_join(
     migbirdHIP:::licenses_ref |>
       dplyr::select(
@@ -156,46 +156,17 @@ bit <-
     issue_date = lubridate::mdy(issue_date),
     type = 
       dplyr::case_when(
-        # Issue date is valid for this season, but registration year is !=
-        # params$year
-        issue_date %within% 
-          lubridate::interval(issue_start, issue_end) & 
-          registration_yr != as.character(params$year) ~ 
-          "good issue date, but registration year is",
-        # Issue date is before the first day of the hunting season &
-        # registration year is params$year 
-        issue_date < issue_start & 
-          registration_yr == as.character(params$year) ~ 
-          "issue date before the first day of issuance",
-        # Issue date is before the first day of the hunting season &
-        # registration year is != params$year
-        issue_date < issue_start & 
-          registration_yr != as.character(params$year) ~ 
-          paste0(
-            "issue date before the first day of issuance, and",
-            " registration year is"),
-        # Issue date is after issue_end
-        issue_date > issue_end & 
-          registration_yr == as.character(params$year) ~ 
-          "issue date after end of issue window",
-        # Repeat above but with different registration yr
-        # Issue date is after issue_end
-        issue_date > issue_end & 
-          registration_yr != as.character(params$year) ~ 
-          paste0(
-            "issue date after end of issue window and last day of hunting, ",
-            "and registration year is"),
+        # Issue date is before the first day of the hunting season 
+        issue_date < issue_start ~ 
+          "issue date before the first day of issuance (past records filtered out)",
+        # Issue date is after issue_end (and is not 2 season state)
+        issue_date > issue_end & issue_eval != "two season state" ~ 
+          "issue date after end of issue window (bad)",
         TRUE ~ NA_character_
       )
-    ) |> 
+  ) |> 
   dplyr::filter(!is.na(type)) |> 
-  dplyr::mutate(
-    message = 
-      ifelse(
-        registration_yr != as.character(params$year),
-        paste("Records with", type, registration_yr, sep = " "),
-        paste("Records with", type, sep = " "))
-  ) |>
+  dplyr::mutate(message = paste("Records with", type, sep = " ")) |>
   dplyr::count(dl_state, message) |> 
   dplyr::arrange(dplyr::desc(n)) 
 
@@ -229,7 +200,7 @@ emails_missing <-
         is.na(email) ~ "Missing",
         TRUE ~ NA_character_)) 
 
-# 100% email missing/incorrect 
+# >90% email missing/incorrect 
 emails_missing_flagged <-
   emails_missing |> 
   dplyr::select(-c("email", "errors")) |> 
@@ -245,7 +216,7 @@ emails_missing_flagged <-
   dplyr::ungroup() |> 
   dplyr::select(-c("Category", "dl_state", "total")) |> 
   dplyr::distinct() |> 
-  dplyr::filter(proportion == 1) 
+  dplyr::filter(proportion >= 0.9) 
 
 # Missing PII
 pii_summary <- 
@@ -344,9 +315,6 @@ huntcheck <-
   dplyr::filter(hunt_mig_birds != 2) |> 
   dplyr::mutate(prop = round(n/total, 2)) |> 
   dplyr::arrange(dplyr::desc(prop))
-
-# HuntY == 100%
-huntcheck2 <- huntcheck |> dplyr::filter(prop == 1)
 
 # Strata check table
 stratacheck_tbl <- migbirdHIP::strataCheck(final_data)
@@ -641,13 +609,11 @@ important_statistics <- NULL
 
 ```
 
-```{r agenda_details}
+## Blank files
+
+```{r agenda_details_1}
 #| echo: false
 #| output: asis
-
-cat("\n\n")
-cat("## Blank files")
-cat("\n\n")
 
 if(nrow(blanks) > 0) {
   if(nrow(blanks) == 1) {
@@ -715,13 +681,13 @@ if(nrow(emails_missing_flagged) > 0) {
     cat(
       paste0(
       "❌", 
-      " One file is missing 100% of emails."))
+      " One file is missing > 90% of emails."))
   } else if(nrow(emails_missing_flagged) > 1) {
     cat(
       paste0(
       "❌", 
       " ", nrow(emails_missing_flagged), 
-      " files are missing 100% of emails."))
+      " files are missing > 90% of emails."))
   }
   cat("\n\n")
   emails_missing_flagged |> 
@@ -735,42 +701,32 @@ if(nrow(emails_missing_flagged) > 0) {
     kableExtra::row_spec(
       1:nrow(emails_missing_flagged), extra_css = "padding: 3px;")
 } else {
-  cat(paste0("✔️", " No files are missing 100% of emails."))
+  cat(paste0("✔️", " No files are missing > 90% of emails."))
 }
 
 cat("\n\n")
 cat("## HuntY")
 cat("\n\n")
-if(nrow(huntcheck2) > 0) {
-  if(nrow(huntcheck2) == 1) {
+if(nrow(huntcheck) > 0) {
+  if(nrow(huntcheck) == 1) {
     cat(
       paste0(
-      "❌", 
-      " One file reported 100% HuntY = ", 
-      huntcheck2$hunt_mig_birds, "."))
-  } else if(length(unique(huntcheck2$source_file)) > 1 & 
-            length(unique(huntcheck2$hunt_mig_birds)) == 1) {
+        "❌", 
+        " ",
+        huntcheck$source_file,
+        " reported ",
+        paste0(huntcheck$prop*100, "%"),
+        " HuntY = ", 
+        huntcheck$hunt_mig_birds, "."))
+  } else if(length(unique(huntcheck$source_file)) > 1) {
     cat(
       paste0(
-      "❌", 
-      " ", length(unique(huntcheck2$source_file)), 
-      " files reported 100% HuntY = ", 
-      huntcheck2$hunt_mig_birds, "."))
-  } else if(length(unique(huntcheck2$source_file)) > 1 & 
-            length(unique(huntcheck2$hunt_mig_birds)) > 1) {
-    cat(
-      paste0(
-      "❌", 
-      " ", length(unique(huntcheck2$source_file)), 
-      " files reported 100% HuntY of ", 
-      stringr::str_replace(
-        paste0(huntcheck2$hunt_mig_birds, collapse = ", "), 
-        "\\, (?=[0-9]$)", 
-        " and "), 
-      "."))
+        "❌", 
+        " ", length(unique(huntcheck$source_file)), 
+        " files reported HuntY other than 2."))
   }
   cat("\n\n")
-  huntcheck2 |> 
+  huntcheck |> 
     dplyr::mutate(prop = paste0(prop*100, "%")) |> 
     dplyr::select(
       File = source_file,
@@ -780,15 +736,51 @@ if(nrow(huntcheck2) > 0) {
     kableExtra::kbl() |> 
     kableExtra::kable_styling(full_width = F) |> 
     kableExtra::row_spec(
-      1:nrow(huntcheck2), extra_css = "padding: 3px;")
+      1:nrow(huntcheck), extra_css = "padding: 3px;")
 } else {
-  cat(paste0("✔️", " No values other than HuntY = 2 for 100% of file."))
+  cat(paste0("✔️", " No values other than HuntY = 2 submitted."))
 }
+```
 
-cat("\n\n")
-cat("## Bag values")
-cat("\n\n")
-if(nrow(stratacheck_tbl) > 0) {
+## Bag values
+
+::: panel-tabset
+
+### Table
+
+```{r stratacheck_agenda_tbl}
+#| echo: false
+#| output: asis
+
+if(!is.null(stratacheck_tbl)) {
+  cat(paste0("❌", " Incorrect bag values detected."))
+  cat("\n\n")
+  DT::datatable(
+    stratacheck_tbl |> 
+      dplyr::mutate(
+        nprop = as.numeric(stringr::str_extract(prop, "[0-9]{1,3}"))) |>
+      dplyr::arrange(dplyr::desc(nprop)) |> 
+      dplyr::select(-nprop) |> 
+      dplyr::rename(
+        `State` = dl_state,
+        Species = spp,
+        `Strata provided` = state_strata,
+        `Strata expected` = normal_strata,
+        Count = n,
+        Proportion = prop)
+    )
+} else { 
+  cat(paste0("✔️", " All bag values are correct."))
+}
+```
+
+### Bullets
+
+```{r stratacheck_agenda_tbl}
+#| echo: false
+#| output: asis
+
+if(!is.null(stratacheck_tbl)) {
   cat(paste0("❌", " Incorrect bag values detected."))
   cat("\n\n")
   if(nrow(stratacheck_tbl) == 1) {
@@ -839,10 +831,16 @@ if(nrow(stratacheck_tbl) > 0) {
 } else { 
   cat(paste0("✔️", " All bag values are correct."))
 }
+```
 
-cat("\n\n")
-cat("## Repeated and identical bag values")
-cat("\n\n")
+:::
+
+## Repeated and identical bag values
+
+```{r agenda_details_2}
+#| echo: false
+#| output: asis
+
 cat("### Identical bag columns")
 cat("\n\n")
 if(nrow(idb2) > 0) {
@@ -934,55 +932,55 @@ if(nrow(vrep_100) > 0) {
     paste0(
       "❌", 
       " Vertical repetition was detected in file(s) with more than 100 rows."))
-  cat("\n\n")
-  if(nrow(vrep_100) == 1) {
-  cat(
-    paste0(
-      "* ", vrep_100$source_file,
-      " repeated ", vrep_100$repeated_value, 
-      " for ", 
-      vrep_100$spp,
-      "(n = ", unique(vrep_100$v_repeated), 
-      " records).")
-    )
-  } else if(nrow(vrep_100) > 1) {
-    vrep_100_split <- 
-      split(vrep_100, vrep_100$source_file) |>
-      setNames(
-        vrep_100 |> 
-          dplyr::distinct(source_file, v_repeated) |> 
-          dplyr::pull(v_repeated))
-    
-    vrep_100_split <- 
-      vrep_100_split[
-        as.character(sort(as.numeric(names(vrep_100_split)), decreasing = T))]
-    
-    writeLines(
-      unlist(
-        purrr::map(
-          1:length(vrep_100_split),
-          function(x) {
-            list(
-              paste(
-                "*",
-                unique(vrep_100_split[[x]]$source_file),
-                "(n =", unique(vrep_100_split[[x]]$v_repeated), 
-                "records)", sep = " "),
-              purrr::map(
-                1:nrow(vrep_100_split[[x]]),
-                function(y) {
-                  paste0(
-                    "    + ", vrep_100_split[[x]]$repeated_value[y], 
-                    " for ", 
-                    vrep_100_split[[x]]$spp[y])
-                }
-              )
-            )
-          }
-        )
-      )
-    )
-  }
+  # cat("\n\n")
+  # if(nrow(vrep_100) == 1) {
+  # cat(
+  #   paste0(
+  #     "* ", vrep_100$source_file,
+  #     " repeated ", vrep_100$repeated_value, 
+  #     " for ", 
+  #     vrep_100$spp,
+  #     "(n = ", unique(vrep_100$v_repeated), 
+  #     " records).")
+  #   )
+  # } else if(nrow(vrep_100) > 1) {
+  #   vrep_100_split <- 
+  #     split(vrep_100, vrep_100$source_file) |>
+  #     setNames(
+  #       vrep_100 |> 
+  #         dplyr::distinct(source_file, v_repeated) |> 
+  #         dplyr::pull(v_repeated))
+  #   
+  #   vrep_100_split <- 
+  #     vrep_100_split[
+  #       as.character(sort(as.numeric(names(vrep_100_split)), decreasing = T))]
+  #   
+  #   writeLines(
+  #     unlist(
+  #       purrr::map(
+  #         1:length(vrep_100_split),
+  #         function(x) {
+  #           list(
+  #             paste(
+  #               "*",
+  #               unique(vrep_100_split[[x]]$source_file),
+  #               "(n =", unique(vrep_100_split[[x]]$v_repeated), 
+  #               "records)", sep = " "),
+  #             purrr::map(
+  #               1:nrow(vrep_100_split[[x]]),
+  #               function(y) {
+  #                 paste0(
+  #                   "    + ", vrep_100_split[[x]]$repeated_value[y], 
+  #                   " for ", 
+  #                   vrep_100_split[[x]]$spp[y])
+  #               }
+  #             )
+  #           )
+  #         }
+  #       )
+  #     )
+  #   )
+  # }
 } else { 
   cat(paste0("✔️", " No vertical repetition detected."))
 }
@@ -1190,10 +1188,7 @@ Files were received from the following yellow states. Hexagons shaded blue, oran
 #| echo: false
 #| fig-align: center
 
-if(params$dl == "0800") {
-  cat("Map not available for this report.")
-  
-  files_received <- 
+files_received <- 
     # Get all of the received files up to and including this download
     list.files(
       stringr::str_remove(params$raw_path, "\\/D.+"), recursive = T) |> 
@@ -1232,6 +1227,9 @@ if(params$dl == "0800") {
       by = "state"
     ) |> 
     dplyr::arrange(id)
+
+if(params$dl == "0800") {
+  cat("Map not available for this report.")
 } else {
   
   migbirdHIP:::hexmap |>
@@ -1915,6 +1913,7 @@ zipcheck <-
   dplyr::group_by(dl_state, state, zip, zipState) |> 
   dplyr::count() |> 
   dplyr::ungroup() |>
+  dplyr::arrange(dplyr::desc(n)) |> 
   dplyr::rename(
     `Download state` = dl_state,
     `Address state` = state,
