--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -266,7 +266,7 @@ important_statistics <-
     dplyr::filter(
       !stringr::str_detect(
         value, 
-        "are blank|ID fields|provided state|write-out|past records|0 future|issue_date in the|Mississippi|100% of emails|00/00/0000")
+        "reg_yr_eval|Current registrations with|are blank|ID fields|provided state|write-out|past records|0 future|issue_date in the|Mississippi|100% of emails|00/00/0000")
     ) |> 
     dplyr::mutate(
       value = 
